Fixed videos overlapping time ago text in comments

--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -306,6 +306,7 @@
       margin: 0;
       overflow: hidden;
       text-overflow: ellipsis;
+      float: left;
     }
   }
 
